--- a/PatternDetection/UnsupervisedLearning_Hands-on.ipynb
+++ b/PatternDetection/UnsupervisedLearning_Hands-on.ipynb
@@ -138,12 +138,66 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "57d89f81",
+   "metadata": {},
+   "source": [
+    "# Quality of the generated communities "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "748e345b",
+   "metadata": {},
+   "source": [
+    "Moving to folder"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "1d146026",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "%cd clusteringMeasures"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "89683579",
+   "metadata": {},
+   "source": [
+    "**Clean the build**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "77d9bc36",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!make clean"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d8efe761",
+   "metadata": {},
+   "source": [
+    "**Build the project**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9ac58c5d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!make"
+   ]
   },
   {
    "cell_type": "code",
@@ -159,7 +213,9 @@
    "id": "0d27eb2e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "computeMetric(model_list, threshold)"
+   ]
   }
  ],
  "metadata": {
