--- a/PatternDetection/UnsupervisedLearning_Hands-on.ipynb
+++ b/PatternDetection/UnsupervisedLearning_Hands-on.ipynb
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57d89f81",
+   "id": "4f351174",
    "metadata": {},
    "source": [
     "# Quality of the generated communities "
@@ -147,10 +147,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "748e345b",
+   "id": "dd6fc02f",
    "metadata": {},
    "source": [
-    "Moving to folder"
+    "Moving to clusteringMeasures folder "
    ]
   },
   {
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89683579",
+   "id": "2a78c019",
    "metadata": {},
    "source": [
     "**Clean the build**"
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77d9bc36",
+   "id": "db7d5f58",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8efe761",
+   "id": "18bf52ce",
    "metadata": {},
    "source": [
     "**Build the project**"
@@ -192,7 +192,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ac58c5d",
+   "id": "af6ed877",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,19 +202,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fedaf4e0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "0d27eb2e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "computeMetric(model_list, threshold)"
+    "import ComputeMetrices\n",
+    "ComputeMetrices.run(model_list, threshold)"
    ]
   }
  ],
