--- a/PatternDetection/UnsupervisedLearning_Hands-on.ipynb
+++ b/PatternDetection/UnsupervisedLearning_Hands-on.ipynb
@@ -56,7 +56,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import ComputeCommunities as SemCD"
+    "import ComputeCommunities as SemCD\n",
+    "import EvaluationMetric"
    ]
   },
   {
@@ -139,7 +140,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f351174",
+   "id": "47934819",
    "metadata": {},
    "source": [
     "# Quality of the generated communities "
@@ -147,7 +148,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd6fc02f",
+   "id": "6d120a88",
    "metadata": {},
    "source": [
     "Moving to clusteringMeasures folder "
@@ -165,7 +166,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a78c019",
+   "id": "d1af009a",
    "metadata": {},
    "source": [
     "**Clean the build**"
@@ -174,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db7d5f58",
+   "id": "9420de96",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +184,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18bf52ce",
+   "id": "35b4e141",
    "metadata": {},
    "source": [
     "**Build the project**"
@@ -192,7 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af6ed877",
+   "id": "762f7fc7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,6 +209,16 @@
    "source": [
     "import ComputeMetrices\n",
     "ComputeMetrices.run(model_list, threshold)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d2d2b005",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "EvaluationMetric.GenerateRadarPlot(model_list, threshold)"
    ]
   }
  ],
