updating radar plot

--- a/PatternDetection/UnsupervisedLearning_Hands-on.ipynb
+++ b/PatternDetection/UnsupervisedLearning_Hands-on.ipynb
@@ -101,7 +101,7 @@
    "id": "19bdffb2",
    "metadata": {},
    "source": [
-    "### Run the semEP-node"
+    "## Run the semEP-node"
    ]
   },
   {
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47934819",
+   "id": "7b7e3313",
    "metadata": {},
    "source": [
     "# Quality of the generated communities "
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d120a88",
+   "id": "21daafef",
    "metadata": {},
    "source": [
     "Moving to clusteringMeasures folder "
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1af009a",
+   "id": "c86c86b8",
    "metadata": {},
    "source": [
     "**Clean the build**"
@@ -175,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9420de96",
+   "id": "4fde307a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35b4e141",
+   "id": "ea340979",
    "metadata": {},
    "source": [
     "**Build the project**"
@@ -193,7 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "762f7fc7",
+   "id": "994333ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,10 +214,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d2d2b005",
+   "id": "5c567f55",
    "metadata": {},
    "outputs": [],
    "source": [
+    "%cd content/SymbolicLearning_KGE/PatternDetection\n",
     "EvaluationMetric.GenerateRadarPlot(model_list, threshold)"
    ]
   }
