--- a/PatternDetection/UnsupervisedLearning_Hands-on.ipynb
+++ b/PatternDetection/UnsupervisedLearning_Hands-on.ipynb
@@ -5,7 +5,7 @@
    "id": "87d2910c",
    "metadata": {},
    "source": [
-    "# Empowering Healthcare with Symbolic Learning and Knowledge Graph Embeddings"
+    "# **Empowering Healthcare with Symbolic Learning and Knowledge Graph Embeddings**"
    ]
   },
   {
@@ -23,7 +23,7 @@
    "source": [
     "## **Pattern Detection, Analysis and Explanation over P4-LUCAT Knowledge Graph**\n",
     "\n",
-    "> Unsupervised learning\n",
+    ">> **Pattern Detection. Unsupervised learning**\n",
     "*   Save Learned Embeddings\n",
     "*   Apply cluster Algorithm: KMeans\n",
     "*   Select the optimal number of clusters\n",
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "433cb462",
+   "id": "33d1b934",
    "metadata": {},
    "source": [
     "## Quality of the generated communities "
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "871518fd",
+   "id": "fd183b6a",
    "metadata": {},
    "source": [
     "Moving to clusteringMeasures folder "
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58bfc3d8",
+   "id": "a373f7ac",
    "metadata": {},
    "source": [
     "**Clean the build**"
@@ -175,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff92bfd4",
+   "id": "2e2b8f90",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "193bef3d",
+   "id": "fbcf9d9d",
    "metadata": {},
    "source": [
     "**Build the project**"
@@ -193,7 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82bb0c78",
+   "id": "41d2b15a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a696426",
+   "id": "dc99a716",
    "metadata": {},
    "outputs": [],
    "source": [
