--- a/PatternDetection/UnsupervisedLearning_Hands-on.ipynb
+++ b/PatternDetection/UnsupervisedLearning_Hands-on.ipynb
@@ -24,10 +24,11 @@
     "## **Pattern Detection, Analysis and Explanation over P4-LUCAT Knowledge Graph**\n",
     "\n",
     ">> **Pattern Detection. Unsupervised learning**\n",
-    "*   Save Learned Embeddings\n",
-    "*   Apply cluster Algorithm: KMeans\n",
-    "*   Select the optimal number of clusters\n",
-    "*   Visualize PCA Projection to 2D\n"
+    "*   Learned embeddings of the entities in the Knowledge Graph\n",
+    "*   Apply community detection Algorithms: SemEP, KMeans\n",
+    "*   Compute the quality of the communities generated\n",
+    "*   Generate Radar-plots \n",
+    "*   Visualize PCA Projection to 2D of the detected cummunities\n"
    ]
   },
   {
@@ -121,7 +122,7 @@
    "source": [
     "model_list = ['TransH', 'RotatE']\n",
     "threshold = [30, 40, 50, 60, 70, 80]\n",
-    "kg_name = 'OriginalKG'\n",
+    "kg_name = 'TransformedKG'\n",
     "target_predicate = 'hasRelapse_Progression'"
    ]
   },
@@ -140,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33d1b934",
+   "id": "02fe8248",
    "metadata": {},
    "source": [
     "## Quality of the generated communities "
@@ -148,7 +149,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd183b6a",
+   "id": "cd230f18",
    "metadata": {},
    "source": [
     "Moving to clusteringMeasures folder "
@@ -166,7 +167,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a373f7ac",
+   "id": "1f7961ff",
    "metadata": {},
    "source": [
     "**Clean the build**"
@@ -175,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e2b8f90",
+   "id": "46698050",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +185,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fbcf9d9d",
+   "id": "f2598d98",
    "metadata": {},
    "source": [
     "**Build the project**"
@@ -193,11 +194,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41d2b15a",
+   "id": "6ab0df48",
    "metadata": {},
    "outputs": [],
    "source": [
     "!make"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4498c701",
+   "metadata": {},
+   "source": [
+    "**Compute Metrices**"
    ]
   },
   {
@@ -212,9 +221,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fcfdc4a5",
+   "metadata": {},
+   "source": [
+    "### Generate Radar Plot"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc99a716",
+   "id": "31871c23",
    "metadata": {},
    "outputs": [],
    "source": [
