--- a/PatternDetection/UnsupervisedLearning_Hands-on.ipynb
+++ b/PatternDetection/UnsupervisedLearning_Hands-on.ipynb
@@ -121,7 +121,7 @@
    "outputs": [],
    "source": [
     "model_list = ['TransH', 'RotatE']\n",
-    "threshold = [30, 40, 50, 60, 70, 80]\n",
+    "threshold = [30, 35, 40, 45, 50, 55, 60, 65, 70, 80]\n",
     "kg_name = 'TransformedKG'\n",
     "target_predicate = 'hasRelapse_Progression'"
    ]
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "02fe8248",
+   "id": "13f12ba5",
    "metadata": {},
    "source": [
     "## Quality of the generated communities "
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd230f18",
+   "id": "b13f1638",
    "metadata": {},
    "source": [
     "Moving to clusteringMeasures folder "
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f7961ff",
+   "id": "9900222b",
    "metadata": {},
    "source": [
     "**Clean the build**"
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46698050",
+   "id": "de28909b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2598d98",
+   "id": "3db3884a",
    "metadata": {},
    "source": [
     "**Build the project**"
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ab0df48",
+   "id": "5159e416",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4498c701",
+   "id": "6cf9aa2e",
    "metadata": {},
    "source": [
     "**Compute Metrices**"
@@ -222,22 +222,46 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fcfdc4a5",
+   "id": "aa86e4dc",
    "metadata": {},
    "source": [
-    "### Generate Radar Plot"
+    "**Generate Radar Plot**"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31871c23",
+   "id": "2b1ab82b",
    "metadata": {},
    "outputs": [],
    "source": [
     "%cd ../\n",
     "EvaluationMetric.GenerateRadarPlot(model_list, threshold)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e6b6ff2a",
+   "metadata": {},
+   "source": [
+    "# Analysis and Explanation over P4-LUCAT Knowledge Graph"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "81930d0f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "990172be",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
