--- a/PatternDetection/UnsupervisedLearning_Hands-on.ipynb
+++ b/PatternDetection/UnsupervisedLearning_Hands-on.ipynb
@@ -121,7 +121,7 @@
    "outputs": [],
    "source": [
     "model_list = ['TransH', 'RotatE']\n",
-    "threshold = [30, 35, 40, 45, 50, 55, 60, 65, 70, 80]\n",
+    "threshold = [35, 36, 37, 64, 65]\n",
     "kg_name = 'TransformedKG'\n",
     "target_predicate = 'hasRelapse_Progression'"
    ]
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13f12ba5",
+   "id": "61a59fbc",
    "metadata": {},
    "source": [
     "## Quality of the generated communities "
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b13f1638",
+   "id": "550bc083",
    "metadata": {},
    "source": [
     "Moving to clusteringMeasures folder "
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9900222b",
+   "id": "bf709a07",
    "metadata": {},
    "source": [
     "**Clean the build**"
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de28909b",
+   "id": "91c9a195",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3db3884a",
+   "id": "99187345",
    "metadata": {},
    "source": [
     "**Build the project**"
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5159e416",
+   "id": "837f5fab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6cf9aa2e",
+   "id": "36078b3c",
    "metadata": {},
    "source": [
     "**Compute Metrices**"
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa86e4dc",
+   "id": "d880af09",
    "metadata": {},
    "source": [
     "**Generate Radar Plot**"
@@ -231,7 +231,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b1ab82b",
+   "id": "9ad52dd7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6b6ff2a",
+   "id": "a732575f",
    "metadata": {},
    "source": [
     "# Analysis and Explanation over P4-LUCAT Knowledge Graph"
@@ -250,7 +250,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81930d0f",
+   "id": "8591377b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -258,7 +258,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "990172be",
+   "id": "ef3a023f",
    "metadata": {},
    "outputs": [],
    "source": []
