--- a/PatternDetection/UnsupervisedLearning_Hands-on.ipynb
+++ b/PatternDetection/UnsupervisedLearning_Hands-on.ipynb
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61a59fbc",
+   "id": "a95d14e0",
    "metadata": {},
    "source": [
     "## Quality of the generated communities "
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "550bc083",
+   "id": "88f0b57c",
    "metadata": {},
    "source": [
     "Moving to clusteringMeasures folder "
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf709a07",
+   "id": "e653c28e",
    "metadata": {},
    "source": [
     "**Clean the build**"
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91c9a195",
+   "id": "d0796ea3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99187345",
+   "id": "f3bc9a80",
    "metadata": {},
    "source": [
     "**Build the project**"
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "837f5fab",
+   "id": "3b752d5c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36078b3c",
+   "id": "4d3ab6e1",
    "metadata": {},
    "source": [
     "**Compute Metrices**"
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d880af09",
+   "id": "583aec65",
    "metadata": {},
    "source": [
     "**Generate Radar Plot**"
@@ -231,7 +231,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ad52dd7",
+   "id": "e6d54466",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a732575f",
+   "id": "e0c6afb7",
    "metadata": {},
    "source": [
     "# Analysis and Explanation over P4-LUCAT Knowledge Graph"
@@ -250,7 +250,37 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8591377b",
+   "id": "313e30b2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%cd PatternAnalysisExplanation\n",
+    "import PatternAnalysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ec852c83",
+   "metadata": {},
+   "source": [
+    "**Targeting the clusters with the '*target_predicate*' selected**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "86fb5076",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "target_cls = PatternAnalysis.target_cluster(kg_name, model_list[1], target_predicate, 'SemEP', threshold[3])\n",
+    "display(target_cls.head(), target_cls.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "74107cfd",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -258,10 +288,52 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef3a023f",
+   "id": "ee777374",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df = target_cls[['Relapse', 'cluster']]\n",
+    "q = df.groupby(['Relapse', 'cluster']).size().reset_index(name='count_values')\n",
+    "# Display the resulting dataframe\n",
+    "df_reset = q.reset_index(drop=True)\n",
+    "df_reset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f9cfb29a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = df_reset.loc[df_reset.Relapse=='No relapse']\n",
+    "b = df_reset.loc[df_reset.Relapse=='Relapse']\n",
+    "c = df_reset.loc[df_reset.Relapse=='UnKnown']\n",
+    "a.count_values = a.count_values/246\n",
+    "b.count_values = b.count_values/716\n",
+    "c.count_values = c.count_values/280\n",
+    "\n",
+    "df_reset = pd.concat([a, b, c])\n",
+    "df_reset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e9da6573",
+   "metadata": {},
+   "source": [
+    "### Visualization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9c4933ef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "catplot(df_reset, model_list[1])"
+   ]
   }
  ],
  "metadata": {
