--- a/PatternDetection/UnsupervisedLearning_Hands-on.ipynb
+++ b/PatternDetection/UnsupervisedLearning_Hands-on.ipynb
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a95d14e0",
+   "id": "f96a549d",
    "metadata": {},
    "source": [
     "## Quality of the generated communities "
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88f0b57c",
+   "id": "f474aa00",
    "metadata": {},
    "source": [
     "Moving to clusteringMeasures folder "
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e653c28e",
+   "id": "f4d57567",
    "metadata": {},
    "source": [
     "**Clean the build**"
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0796ea3",
+   "id": "33a74b38",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3bc9a80",
+   "id": "0c353dca",
    "metadata": {},
    "source": [
     "**Build the project**"
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b752d5c",
+   "id": "f7c49768",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d3ab6e1",
+   "id": "4618ba81",
    "metadata": {},
    "source": [
     "**Compute Metrices**"
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "583aec65",
+   "id": "fb994411",
    "metadata": {},
    "source": [
     "**Generate Radar Plot**"
@@ -231,7 +231,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e6d54466",
+   "id": "4af81c70",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0c6afb7",
+   "id": "a698b6fa",
    "metadata": {},
    "source": [
     "# Analysis and Explanation over P4-LUCAT Knowledge Graph"
@@ -250,17 +250,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "313e30b2",
+   "id": "a49d0be6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "%cd PatternAnalysisExplanation\n",
+    "%cd ../PatternAnalysisExplanation\n",
     "import PatternAnalysis"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ec852c83",
+   "id": "d4375240",
    "metadata": {},
    "source": [
     "**Targeting the clusters with the '*target_predicate*' selected**"
@@ -269,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86fb5076",
+   "id": "41b1b3f0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74107cfd",
+   "id": "a0f77d8b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -288,7 +288,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee777374",
+   "id": "791a2d67",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +302,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9cfb29a",
+   "id": "9db7e608",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9da6573",
+   "id": "c6319dec",
    "metadata": {},
    "source": [
     "### Visualization"
@@ -328,7 +328,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c4933ef",
+   "id": "e857c9e5",
    "metadata": {},
    "outputs": [],
    "source": [
