--- a/PatternDetection/UnsupervisedLearning_Hands-on.ipynb
+++ b/PatternDetection/UnsupervisedLearning_Hands-on.ipynb
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f96a549d",
+   "id": "6f573f48",
    "metadata": {},
    "source": [
     "## Quality of the generated communities "
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f474aa00",
+   "id": "a3f2f478",
    "metadata": {},
    "source": [
     "Moving to clusteringMeasures folder "
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4d57567",
+   "id": "3b2c20fb",
    "metadata": {},
    "source": [
     "**Clean the build**"
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33a74b38",
+   "id": "95755d58",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c353dca",
+   "id": "8f0b01a2",
    "metadata": {},
    "source": [
     "**Build the project**"
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f7c49768",
+   "id": "91d68877",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4618ba81",
+   "id": "82239f3f",
    "metadata": {},
    "source": [
     "**Compute Metrices**"
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb994411",
+   "id": "4715e03b",
    "metadata": {},
    "source": [
     "**Generate Radar Plot**"
@@ -231,7 +231,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4af81c70",
+   "id": "98ece211",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a698b6fa",
+   "id": "453ba24d",
    "metadata": {},
    "source": [
     "# Analysis and Explanation over P4-LUCAT Knowledge Graph"
@@ -250,17 +250,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a49d0be6",
+   "id": "97dc8dd6",
    "metadata": {},
    "outputs": [],
    "source": [
     "%cd ../PatternAnalysisExplanation\n",
-    "import PatternAnalysis"
+    "import PatternAnalysis\n",
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d4375240",
+   "id": "d67676e0",
    "metadata": {},
    "source": [
     "**Targeting the clusters with the '*target_predicate*' selected**"
@@ -269,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41b1b3f0",
+   "id": "fc53f99c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,40 +279,50 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a0f77d8b",
+   "cell_type": "markdown",
+   "id": "89e42bdf",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "791a2d67",
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "df = target_cls[['Relapse', 'cluster']]\n",
-    "q = df.groupby(['Relapse', 'cluster']).size().reset_index(name='count_values')\n",
-    "# Display the resulting dataframe\n",
-    "df_reset = q.reset_index(drop=True)\n",
-    "df_reset"
+    "**Compute the amount of patients for each the target value (column Relapse) and cluster**"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9db7e608",
+   "id": "233452f9",
    "metadata": {},
    "outputs": [],
    "source": [
+    "df = target_cls[['Relapse', 'cluster']]\n",
+    "q = df.groupby(['Relapse', 'cluster']).size().reset_index(name='count_values')\n",
+    "df_reset = q.reset_index(drop=True)\n",
+    "df_reset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bd5393c5",
+   "metadata": {},
+   "source": [
+    "**Normalaizing "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "392511de",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Group by 'Relapse' and sum 'count_values'\n",
+    "result = df_reset.groupby('Relapse')['count_values'].sum().reset_index()\n",
+    "\n",
     "a = df_reset.loc[df_reset.Relapse=='No relapse']\n",
     "b = df_reset.loc[df_reset.Relapse=='Relapse']\n",
     "c = df_reset.loc[df_reset.Relapse=='UnKnown']\n",
-    "a.count_values = a.count_values/246\n",
-    "b.count_values = b.count_values/716\n",
-    "c.count_values = c.count_values/280\n",
+    "a.count_values = a.count_values/result[result['Relapse'] == 'No relapse']['count_values'].values[0]\n",
+    "b.count_values = b.count_values/result[result['Relapse'] == 'Relapse']['count_values'].values[0]\n",
+    "c.count_values = c.count_values/result[result['Relapse'] == 'UnKnown']['count_values'].values[0]\n",
     "\n",
     "df_reset = pd.concat([a, b, c])\n",
     "df_reset"
@@ -319,7 +330,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6319dec",
+   "id": "54b1235a",
    "metadata": {},
    "source": [
     "### Visualization"
@@ -328,11 +339,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e857c9e5",
+   "id": "cb20d4d6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "catplot(df_reset, model_list[1])"
+    "PatternAnalysis.catplot(df_reset, model_list[1])"
    ]
   }
  ],
