--- a/PatternDetection/UnsupervisedLearning_Hands-on.ipynb
+++ b/PatternDetection/UnsupervisedLearning_Hands-on.ipynb
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f573f48",
+   "id": "db5b3e4a",
    "metadata": {},
    "source": [
     "## Quality of the generated communities "
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3f2f478",
+   "id": "5200f6d1",
    "metadata": {},
    "source": [
     "Moving to clusteringMeasures folder "
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b2c20fb",
+   "id": "a636e12e",
    "metadata": {},
    "source": [
     "**Clean the build**"
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95755d58",
+   "id": "5ee04e6a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f0b01a2",
+   "id": "ea246896",
    "metadata": {},
    "source": [
     "**Build the project**"
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91d68877",
+   "id": "38cd1fac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82239f3f",
+   "id": "94b6b75c",
    "metadata": {},
    "source": [
     "**Compute Metrices**"
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4715e03b",
+   "id": "72aebe6d",
    "metadata": {},
    "source": [
     "**Generate Radar Plot**"
@@ -231,7 +231,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "98ece211",
+   "id": "b543769d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "453ba24d",
+   "id": "9d458c00",
    "metadata": {},
    "source": [
     "# Analysis and Explanation over P4-LUCAT Knowledge Graph"
@@ -250,7 +250,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97dc8dd6",
+   "id": "afbb6520",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d67676e0",
+   "id": "d3912167",
    "metadata": {},
    "source": [
     "**Targeting the clusters with the '*target_predicate*' selected**"
@@ -270,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc53f99c",
+   "id": "7ed50be2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89e42bdf",
+   "id": "e61b3968",
    "metadata": {},
    "source": [
     "**Compute the amount of patients for each the target value (column Relapse) and cluster**"
@@ -289,7 +289,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "233452f9",
+   "id": "15ed7a71",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,16 +301,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd5393c5",
+   "id": "cdebd54f",
    "metadata": {},
    "source": [
-    "**Normalaizing "
+    "**Normalized Clinical Records** "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "392511de",
+   "id": "cd0967ad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54b1235a",
+   "id": "2028214c",
    "metadata": {},
    "source": [
     "### Visualization"
@@ -339,7 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb20d4d6",
+   "id": "e4ab97a3",
    "metadata": {},
    "outputs": [],
    "source": [
