--- a/PatternDetection/UnsupervisedLearning_Hands-on.ipynb
+++ b/PatternDetection/UnsupervisedLearning_Hands-on.ipynb
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db5b3e4a",
+   "id": "13e0f527",
    "metadata": {},
    "source": [
     "## Quality of the generated communities "
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5200f6d1",
+   "id": "37745ffa",
    "metadata": {},
    "source": [
     "Moving to clusteringMeasures folder "
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a636e12e",
+   "id": "1320623b",
    "metadata": {},
    "source": [
     "**Clean the build**"
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ee04e6a",
+   "id": "ea1ee4fe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea246896",
+   "id": "9d3b291c",
    "metadata": {},
    "source": [
     "**Build the project**"
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38cd1fac",
+   "id": "cf880dc3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94b6b75c",
+   "id": "3ae7b96b",
    "metadata": {},
    "source": [
     "**Compute Metrices**"
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72aebe6d",
+   "id": "03aef422",
    "metadata": {},
    "source": [
     "**Generate Radar Plot**"
@@ -231,7 +231,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b543769d",
+   "id": "39a7208e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d458c00",
+   "id": "d234e8c9",
    "metadata": {},
    "source": [
     "# Analysis and Explanation over P4-LUCAT Knowledge Graph"
@@ -250,7 +250,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "afbb6520",
+   "id": "b64fcdc2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3912167",
+   "id": "0b18c33c",
    "metadata": {},
    "source": [
     "**Targeting the clusters with the '*target_predicate*' selected**"
@@ -270,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ed50be2",
+   "id": "12472e65",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e61b3968",
+   "id": "e3203bf9",
    "metadata": {},
    "source": [
     "**Compute the amount of patients for each the target value (column Relapse) and cluster**"
@@ -289,7 +289,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15ed7a71",
+   "id": "8bb45bfa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cdebd54f",
+   "id": "a4a223a7",
    "metadata": {},
    "source": [
     "**Normalized Clinical Records** "
@@ -310,19 +310,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd0967ad",
+   "id": "305a4c16",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Group by 'Relapse' and sum 'count_values'\n",
     "result = df_reset.groupby('Relapse')['count_values'].sum().reset_index()\n",
     "\n",
-    "a = df_reset.loc[df_reset.Relapse=='No relapse']\n",
-    "b = df_reset.loc[df_reset.Relapse=='Relapse']\n",
-    "c = df_reset.loc[df_reset.Relapse=='UnKnown']\n",
-    "a.count_values = a.count_values/result[result['Relapse'] == 'No relapse']['count_values'].values[0]\n",
-    "b.count_values = b.count_values/result[result['Relapse'] == 'Relapse']['count_values'].values[0]\n",
-    "c.count_values = c.count_values/result[result['Relapse'] == 'UnKnown']['count_values'].values[0]\n",
+    "a = df_reset.loc[df_reset.Relapse=='No relapse'].copy()\n",
+    "b = df_reset.loc[df_reset.Relapse=='Relapse'].copy()\n",
+    "c = df_reset.loc[df_reset.Relapse=='UnKnown'].copy()\n",
+    "a['count_values'] = a['count_values']/result[result['Relapse'] == 'No relapse']['count_values'].values[0]\n",
+    "b['count_values'] = b['count_values']/result[result['Relapse'] == 'Relapse']['count_values'].values[0]\n",
+    "c['count_values'] = c['count_values']/result[result['Relapse'] == 'UnKnown']['count_values'].values[0]\n",
     "\n",
     "df_reset = pd.concat([a, b, c])\n",
     "df_reset"
@@ -330,16 +330,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2028214c",
+   "id": "f19cfc22",
    "metadata": {},
    "source": [
-    "### Visualization"
+    "## **Visualization**"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e4ab97a3",
+   "id": "3f6f1560",
    "metadata": {},
    "outputs": [],
    "source": [
