--- a/PatternDetection/UnsupervisedLearning_Hands-on.ipynb
+++ b/PatternDetection/UnsupervisedLearning_Hands-on.ipynb
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13e0f527",
+   "id": "5b7e2afc",
    "metadata": {},
    "source": [
     "## Quality of the generated communities "
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37745ffa",
+   "id": "0494c73c",
    "metadata": {},
    "source": [
     "Moving to clusteringMeasures folder "
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1320623b",
+   "id": "1e6084aa",
    "metadata": {},
    "source": [
     "**Clean the build**"
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea1ee4fe",
+   "id": "ce58cb44",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d3b291c",
+   "id": "b91fddf3",
    "metadata": {},
    "source": [
     "**Build the project**"
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf880dc3",
+   "id": "78f41830",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ae7b96b",
+   "id": "5278b01b",
    "metadata": {},
    "source": [
     "**Compute Metrices**"
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03aef422",
+   "id": "4a302490",
    "metadata": {},
    "source": [
     "**Generate Radar Plot**"
@@ -231,7 +231,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39a7208e",
+   "id": "e99dcdc9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d234e8c9",
+   "id": "ef3f01db",
    "metadata": {},
    "source": [
     "# Analysis and Explanation over P4-LUCAT Knowledge Graph"
@@ -250,18 +250,38 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b64fcdc2",
+   "id": "5eb07aa9",
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%capture\n",
     "%cd ../PatternAnalysisExplanation\n",
+    "!pip install PyMuPDF\n",
     "import PatternAnalysis\n",
     "import pandas as pd"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0b18c33c",
+   "id": "7fde6210",
+   "metadata": {},
+   "source": [
+    "**Visualize PCA Projection to 2D of the detected cummunities**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7b66939a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PatternAnalysis.PCA_projection(kg_name, model_list[1], threshold[3])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e7076b77",
    "metadata": {},
    "source": [
     "**Targeting the clusters with the '*target_predicate*' selected**"
@@ -270,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12472e65",
+   "id": "52f225d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +300,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3203bf9",
+   "id": "7b3ad6ec",
    "metadata": {},
    "source": [
     "**Compute the amount of patients for each the target value (column Relapse) and cluster**"
@@ -289,7 +309,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8bb45bfa",
+   "id": "3d40ad89",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +321,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a4a223a7",
+   "id": "83530ad9",
    "metadata": {},
    "source": [
     "**Normalized Clinical Records** "
@@ -310,7 +330,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "305a4c16",
+   "id": "3a106a25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,7 +350,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f19cfc22",
+   "id": "334e777c",
    "metadata": {},
    "source": [
     "## **Visualization**"
@@ -339,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f6f1560",
+   "id": "06dd1d93",
    "metadata": {},
    "outputs": [],
    "source": [
