updating kge files

--- a/KGEmbedding/kge_handson.ipynb
+++ b/KGEmbedding/kge_handson.ipynb
@@ -34,8 +34,7 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "!git clone https://github.com/SDM-TIB/SymbolicLearning_KGE.git\n",
-    "%cd SymbolicLearning_KGE/KGEmbedding"
+    "!git clone https://github.com/SDM-TIB/SymbolicLearning_KGE.git"
    ],
    "metadata": {
     "collapsed": false
@@ -94,6 +93,22 @@
     "collapsed": false
    },
    "id": "71de7bb767b61a58"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "pred_result_path = \"OriginalKG/TransH/prediction_result.csv\"\n",
+    "pred = pd.read_csv(pred_result_path)\n",
+    "\n",
+    "# Display the prediction result\n",
+    "pred.head(5)"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "dae3bf88c8931da6"
   }
  ],
  "metadata": {
