--- a/PatternDetection/UnsupervisedLearning_Hands-on.ipynb
+++ b/PatternDetection/UnsupervisedLearning_Hands-on.ipynb
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2154b601",
+   "id": "2fc4b993",
    "metadata": {},
    "source": [
     "## Quality of the generated communities "
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf09afa9",
+   "id": "ad64fcbf",
    "metadata": {},
    "source": [
     "Moving to clusteringMeasures folder "
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dffc32f8",
+   "id": "c745d490",
    "metadata": {},
    "source": [
     "**Clean the build**"
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "07cfadc7",
+   "id": "7ff69b55",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0b24618",
+   "id": "7252b3fb",
    "metadata": {},
    "source": [
     "**Build the project**"
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b7d7a96",
+   "id": "6aeee708",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c30bb714",
+   "id": "81ce6957",
    "metadata": {},
    "source": [
     "**Compute Metrices**"
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f95268d8",
+   "id": "4afa1df4",
    "metadata": {},
    "source": [
     "**Generate Radar Plot**"
@@ -231,7 +231,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd8a7843",
+   "id": "498ee180",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,16 +241,29 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61658464",
+   "id": "d593b58c",
    "metadata": {},
    "source": [
     "# Analysis and Explanation over P4-LUCAT Knowledge Graph"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b9949078",
+   "metadata": {},
+   "source": [
+    "## **Pattern Detection, Analysis and Explanation over P4-LUCAT Knowledge Graph**\n",
+    "\n",
+    ">> **Pattern Analysis and Explanation**\n",
+    "*   Visualize PCA Projection to 2D of the detected cummunities\n",
+    "*   Selecting a target predicate to analyze\n",
+    "*   Distribution of Relapse by Cluster\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1292edd",
+   "id": "6cbecf5d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +276,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2fa7e0dd",
+   "id": "3cfa229a",
    "metadata": {},
    "source": [
     "**Visualize PCA Projection to 2D of the detected cummunities**"
@@ -272,7 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f72a0c06",
+   "id": "adce78ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +295,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf1b3fca",
+   "id": "d7bc72e2",
    "metadata": {},
    "source": [
     "**Targeting the clusters with the '*target_predicate*' selected**"
@@ -291,7 +304,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc664f23",
+   "id": "0be6fa0f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +314,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3f9b203",
+   "id": "f9ec5f21",
    "metadata": {},
    "source": [
     "**Compute the amount of patients for each the target value (column Relapse) and cluster**"
@@ -310,7 +323,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97399a1e",
+   "id": "7d687283",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +335,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b6ac678d",
+   "id": "7549c07e",
    "metadata": {},
    "source": [
     "**Normalized Clinical Records** "
@@ -331,7 +344,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fdb19e70",
+   "id": "8178c197",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +364,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12c347f9",
+   "id": "6479bdc1",
    "metadata": {},
    "source": [
     "## **Visualization**"
@@ -360,7 +373,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70a51c02",
+   "id": "58d9c399",
    "metadata": {},
    "outputs": [],
    "source": [
