--- a/PatternDetection/UnsupervisedLearning_Hands-on.ipynb
+++ b/PatternDetection/UnsupervisedLearning_Hands-on.ipynb
@@ -27,8 +27,7 @@
     "*   Learned embeddings of the entities in the Knowledge Graph\n",
     "*   Apply community detection Algorithms: SemEP, KMeans\n",
     "*   Compute the quality of the communities generated\n",
-    "*   Generate Radar-plots \n",
-    "*   Visualize PCA Projection to 2D of the detected cummunities\n"
+    "*   Generate Radar-plots \n"
    ]
   },
   {
@@ -141,7 +140,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2fc4b993",
+   "id": "4ad40469",
    "metadata": {},
    "source": [
     "## Quality of the generated communities "
@@ -149,7 +148,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad64fcbf",
+   "id": "e2150625",
    "metadata": {},
    "source": [
     "Moving to clusteringMeasures folder "
@@ -167,7 +166,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c745d490",
+   "id": "a1ca1fb5",
    "metadata": {},
    "source": [
     "**Clean the build**"
@@ -176,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ff69b55",
+   "id": "15bf80ec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +184,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7252b3fb",
+   "id": "cbe946a2",
    "metadata": {},
    "source": [
     "**Build the project**"
@@ -194,7 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6aeee708",
+   "id": "806be05c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +202,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81ce6957",
+   "id": "148ce7d0",
    "metadata": {},
    "source": [
     "**Compute Metrices**"
@@ -222,7 +221,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4afa1df4",
+   "id": "4297b6e1",
    "metadata": {},
    "source": [
     "**Generate Radar Plot**"
@@ -231,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "498ee180",
+   "id": "647cdec0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +240,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d593b58c",
+   "id": "74037955",
    "metadata": {},
    "source": [
     "# Analysis and Explanation over P4-LUCAT Knowledge Graph"
@@ -249,11 +248,9 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9949078",
+   "id": "ae1cf258",
    "metadata": {},
    "source": [
-    "## **Pattern Detection, Analysis and Explanation over P4-LUCAT Knowledge Graph**\n",
-    "\n",
     ">> **Pattern Analysis and Explanation**\n",
     "*   Visualize PCA Projection to 2D of the detected cummunities\n",
     "*   Selecting a target predicate to analyze\n",
@@ -263,7 +260,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6cbecf5d",
+   "id": "d86268aa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +273,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3cfa229a",
+   "id": "4ab1b378",
    "metadata": {},
    "source": [
     "**Visualize PCA Projection to 2D of the detected cummunities**"
@@ -285,7 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "adce78ed",
+   "id": "aaa3e403",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +292,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7bc72e2",
+   "id": "3702f388",
    "metadata": {},
    "source": [
     "**Targeting the clusters with the '*target_predicate*' selected**"
@@ -304,7 +301,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0be6fa0f",
+   "id": "4515531c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +311,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9ec5f21",
+   "id": "44a76491",
    "metadata": {},
    "source": [
     "**Compute the amount of patients for each the target value (column Relapse) and cluster**"
@@ -323,7 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d687283",
+   "id": "d789e2c4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +332,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7549c07e",
+   "id": "529eb697",
    "metadata": {},
    "source": [
     "**Normalized Clinical Records** "
@@ -344,7 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8178c197",
+   "id": "0140b196",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +361,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6479bdc1",
+   "id": "f1c0cb50",
    "metadata": {},
    "source": [
     "## **Visualization**"
@@ -373,7 +370,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58d9c399",
+   "id": "e5699d63",
    "metadata": {},
    "outputs": [],
    "source": [
