--- a/PatternDetection/UnsupervisedLearning_Hands-on.ipynb
+++ b/PatternDetection/UnsupervisedLearning_Hands-on.ipynb
@@ -21,7 +21,7 @@
    "id": "0ebdc7fe",
    "metadata": {},
    "source": [
-    "## **Pattern Detection, Analysis and Explanation over P4-LUCAT Knowledge Graph**\n",
+    "## **Pattern Detection, Analysis and Explanation over Lung Cancer Knowledge Graph**\n",
     "\n",
     ">> **Pattern Detection. Unsupervised learning**\n",
     "*   Learned embeddings of the entities in the Knowledge Graph\n",
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ad40469",
+   "id": "6fc18a9e",
    "metadata": {},
    "source": [
     "## Quality of the generated communities "
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2150625",
+   "id": "670fc9ad",
    "metadata": {},
    "source": [
     "Moving to clusteringMeasures folder "
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a1ca1fb5",
+   "id": "788d49e3",
    "metadata": {},
    "source": [
     "**Clean the build**"
@@ -175,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15bf80ec",
+   "id": "70cd2f31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cbe946a2",
+   "id": "b4461c33",
    "metadata": {},
    "source": [
     "**Build the project**"
@@ -193,7 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "806be05c",
+   "id": "f74f9607",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "148ce7d0",
+   "id": "52e915a8",
    "metadata": {},
    "source": [
     "**Compute Metrices**"
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4297b6e1",
+   "id": "23603e07",
    "metadata": {},
    "source": [
     "**Generate Radar Plot**"
@@ -230,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "647cdec0",
+   "id": "b508580a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74037955",
+   "id": "26f403f3",
    "metadata": {},
    "source": [
     "# Analysis and Explanation over P4-LUCAT Knowledge Graph"
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae1cf258",
+   "id": "3a4fb93b",
    "metadata": {},
    "source": [
     ">> **Pattern Analysis and Explanation**\n",
@@ -260,7 +260,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d86268aa",
+   "id": "a5f617e1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ab1b378",
+   "id": "bf90e586",
    "metadata": {},
    "source": [
     "**Visualize PCA Projection to 2D of the detected cummunities**"
@@ -282,7 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aaa3e403",
+   "id": "4587be6a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3702f388",
+   "id": "a6b15c04",
    "metadata": {},
    "source": [
     "**Targeting the clusters with the '*target_predicate*' selected**"
@@ -301,7 +301,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4515531c",
+   "id": "788e99e5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44a76491",
+   "id": "6d0e496c",
    "metadata": {},
    "source": [
     "**Compute the amount of patients for each the target value (column Relapse) and cluster**"
@@ -320,7 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d789e2c4",
+   "id": "b25dfb82",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "529eb697",
+   "id": "7cf4914e",
    "metadata": {},
    "source": [
     "**Normalized Clinical Records** "
@@ -341,7 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0140b196",
+   "id": "c6e0a3f4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1c0cb50",
+   "id": "404d38af",
    "metadata": {},
    "source": [
     "## **Visualization**"
@@ -370,7 +370,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5699d63",
+   "id": "bdb72ed9",
    "metadata": {},
    "outputs": [],
    "source": [
