--- a/PatternDetection/UnsupervisedLearning_Hands-on.ipynb
+++ b/PatternDetection/UnsupervisedLearning_Hands-on.ipynb
@@ -57,7 +57,8 @@
    "outputs": [],
    "source": [
     "import ComputeCommunities as SemCD\n",
-    "import EvaluationMetric"
+    "import EvaluationMetric\n",
+    "import StatisticKG"
    ]
   },
   {
@@ -94,6 +95,25 @@
    "outputs": [],
    "source": [
     "!make"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "98227f95",
+   "metadata": {},
+   "source": [
+    "**Statistics of Lung Cancer Knowledge Graph** "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "83df829f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kg_name = 'TransformedKG'\n",
+    "StatisticKG.plot_statistics(kg_name)"
    ]
   },
   {
