--- a/PatternDetection/UnsupervisedLearning_Hands-on.ipynb
+++ b/PatternDetection/UnsupervisedLearning_Hands-on.ipynb
@@ -50,6 +50,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b0fcb6fe",
+   "metadata": {},
+   "source": [
+    "Install rdflib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eee04fc6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install rdflib"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "15629c2f",
@@ -99,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98227f95",
+   "id": "bb1d8e4a",
    "metadata": {},
    "source": [
     "**Statistics of Lung Cancer Knowledge Graph** "
@@ -108,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83df829f",
+   "id": "07e2cfc3",
    "metadata": {},
    "outputs": [],
    "source": [
