--- a/PatternDetection/UnsupervisedLearning_Hands-on.ipynb
+++ b/PatternDetection/UnsupervisedLearning_Hands-on.ipynb
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62999a8f",
+   "id": "f16b805d",
    "metadata": {},
    "source": [
     "* Conductance (**InvC**): measures relatedness of entities in a community, and how different they are to entities outside the community.\n",
@@ -374,8 +374,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = target_cls[['Relapse', 'cluster']]\n",
-    "q = df.groupby(['Relapse', 'cluster']).size().reset_index(name='count_values')\n",
+    "df = target_cls[['Relapse', 'Community']]\n",
+    "q = df.groupby(['Relapse', 'Community']).size().reset_index(name='count_values')\n",
     "df_reset = q.reset_index(drop=True)\n",
     "df_reset"
    ]
